T-test for revenue and confidence interval for conversion rate

--- a/notebooks/3_ab_testing_stats.ipynb
+++ b/notebooks/3_ab_testing_stats.ipynb
@@ -149,14 +149,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "eb089e2d",
+   "metadata": {},
+   "source": [
+    "# Interpretation\n",
+    "The p-value tells us the probability that the observed difference in conversion rates happened by chance.\n",
+    "If p-value < 0.05 the difference is statistically significant and if p-value > 0.05 the difference is not statistically significant.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2adf89ba",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Group revenues"
+    "# T-Test for Revenue (Numerical)\n",
+    "The reason for the test is to find out whether the average revenue per user is significantly different Tbetween control and treatment.\n",
+    "Independent t-test is used because revenue is continuous and the groups are independent.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3bf4d597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-Statistic: 1.492\n",
+      "p-value: 0.1357\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Group revenues\n",
+    "control_revenue = df[df['group'] == 'control']['revenue']\n",
+    "treatment_revenue = df[df['group'] == 'treatment']['revenue']\n",
+    "\n",
+    "#Perfom independent t-test\n",
+    "t_stat, p_value = stats.ttest_ind(treatment_revenue, control_revenue)\n",
+    "\n",
+    "#Show results\n",
+    "print(\"T-Statistic:\", round(t_stat, 3))\n",
+    "print(\"p-value:\", round(p_value, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f018c5e",
+   "metadata": {},
+   "source": [
+    "T-test checks whether the treatment generated signifivantly higher average revenue than control.Because the p-value > 0.05 this means the revenue difference could be due to a random variation. This helps us assess the financial effectiveness of the new page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e5211f2",
+   "metadata": {},
+   "source": [
+    "# Confidence Interval for Conversion Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99d6f38c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Control group 95% CI: (np.float64(0.1094), np.float64(0.135))\n",
+      "Treatment group 95% CI: (np.float64(0.1247), np.float64(0.1518))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def propotion_confint(successes, n, confidence=0.95):\n",
+    "    p_hat = successes / n\n",
+    "    z = stats.norm.ppf(1 - (1 - confidence)/2)\n",
+    "    margin = z * np.sqrt((p_hat * (1 - p_hat)) / n)\n",
+    "    return round(p_hat - margin, 4), round(p_hat + margin, 4)\n",
+    "\n",
+    "#Control group\n",
+    "control = df[df['group'] == 'control']\n",
+    "control_conv = control['purchase'].sum()\n",
+    "control_n = control.shape[0]\n",
+    "\n",
+    "#Treatment group\n",
+    "treatment = df[df['group'] == 'treatment']\n",
+    "treatment_conv = treatment['purchase'].sum()\n",
+    "treatment_n = treatment.shape[0]\n",
+    "\n",
+    "#Compute CIs\n",
+    "control_ci = propotion_confint(control_conv, control_n)\n",
+    "treatment_ci = propotion_confint(treatment_conv, treatment_n)\n",
+    "\n",
+    "print(\"Control group 95% CI:\", control_ci)\n",
+    "print(\"Treatment group 95% CI:\", treatment_ci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0705660f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
