Interpretation of confidence interval

--- a/notebooks/3_ab_testing_stats.ipynb
+++ b/notebooks/3_ab_testing_stats.ipynb
@@ -254,12 +254,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0705660f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Interpretation\n",
+    "The confidence interval tells us the likely range of the true conversion rate for each group. If the intervals do not overlap it is a strong sign that the groups are different but if the intervals overlap the difference may not be statistically meaningful.\n",
+    "This helps visualize the uncertainity around our estimates."
+   ]
   }
  ],
  "metadata": {
