Additional sql queries, ab test intepretations and readme updates

--- a/notebooks/2_sql_queries.ipynb
+++ b/notebooks/2_sql_queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bc34e472",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c15a035e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ab0fc710",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "5000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "6ee4c4c5",
    "metadata": {
     "vscode": {
@@ -110,7 +110,7 @@
        "[('control', 2504, 306, 12.22), ('treatment', 2496, 345, 13.82)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "e3b99416",
    "metadata": {
     "vscode": {
@@ -191,7 +191,7 @@
        "[('control', 6.12, 15326.07), ('treatment', 6.87, 17139.1)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "d0031609",
    "metadata": {
     "vscode": {
@@ -271,7 +271,7 @@
        "[('desktop', 2079, 185.31), ('mobile', 2921, 181.03)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,6 +299,166 @@
   {
    "cell_type": "markdown",
    "id": "868e784c",
+   "metadata": {},
+   "source": [
+    "# Query4: Conversion Rate by Device Type\n",
+    "This query calculates how likely users are to convert (make a purchase) based on their device type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "45a4e71d",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///ecommerce.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>device_type</th>\n",
+       "            <th>total_users</th>\n",
+       "            <th>total_purchases</th>\n",
+       "            <th>conversion_rate_percent</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>desktop</td>\n",
+       "            <td>2079</td>\n",
+       "            <td>259</td>\n",
+       "            <td>12.46</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>mobile</td>\n",
+       "            <td>2921</td>\n",
+       "            <td>392</td>\n",
+       "            <td>13.42</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('desktop', 2079, 259, 12.46), ('mobile', 2921, 392, 13.42)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT \n",
+    "    device_type,\n",
+    "    COUNT(*) AS total_users,\n",
+    "    SUM(purchase) AS total_purchases,\n",
+    "    ROUND(AVG(purchase)*100, 2) AS conversion_rate_percent\n",
+    "FROM ecommerce_data\n",
+    "GROUP BY device_type;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f886799",
+   "metadata": {},
+   "source": [
+    "# Interpretation:\n",
+    "Based on the results of the above query the mobile device type has a better conversion rate as compared to the desktop device type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b6fe638",
+   "metadata": {},
+   "source": [
+    "# Query5: Revenue Per Session By Group\n",
+    "This query calculates the average revenue per second of session time for each group. It evaluates how effective each group is at generating revenue relative to time spent on the site."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ec5c585e",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///ecommerce.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>group</th>\n",
+       "            <th>revenue_per_second</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>control</td>\n",
+       "            <td>0.0342</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>treatment</td>\n",
+       "            <td>0.0368</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('control', 0.0342), ('treatment', 0.0368)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    [group],\n",
+    "    ROUND(SUM(revenue) / SUM(session_duration), 4) AS revenue_per_second\n",
+    "FROM ecommerce_data\n",
+    "GROUP BY [group];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a3ca44",
+   "metadata": {},
+   "source": [
+    "# Interpretation:\n",
+    "Treatment group has a higher revenue per second which could suggest a more efficient user experience or stronger conversion funnel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d956449e",
    "metadata": {},
    "source": []
   }
