--- a/notebooks/3_ab_testing_stats.ipynb
+++ b/notebooks/3_ab_testing_stats.ipynb
@@ -348,11 +348,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "37623fb6",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Revenue Distribution interpretation\n",
+    "The boxplot shows that the majority of users in both control and treatment groups have $0 revenue which reflects the low conversion rates typical in e-commerce.\n",
+    "\n",
+    "Outliers represents the users who did convert and made purchases.These users appear similarly distributed across both groups.\n",
+    "\n",
+    "The visual reinforces the earlier statistical result where the treatment group had a higher average revenue and the difference was not statistically significant. Most users did not convert and the revenue patterns are fairly consistent between the two groups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf45f229",
+   "metadata": {},
    "source": []
   }
  ],
