--- a/notebooks/2_sql_queries.ipynb
+++ b/notebooks/2_sql_queries.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ab0fc710",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     "#Load the dataset\n",
     "df = pd.read_csv('../data/ecommerce_data.csv')\n",
     "\n",
-    "#Use qlalchemy to push to SQL\n",
+    "#Use sqlalchemy to push to SQL\n",
     "from sqlalchemy import create_engine\n",
     "engine = create_engine('sqlite:///ecommerce.db') #Same db as above\n",
     "\n",
