--- a/notebooks/3_ab_testing_stats.ipynb
+++ b/notebooks/3_ab_testing_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ba49005c",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4        5    control         0     0.00               593      mobile"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b2e79c99",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3bf4d597",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "99d6f38c",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,10 @@
     "plt.title('Conversion Rate by Group (with 95% CI)')\n",
     "plt.ylim(0, 0.18)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.show()"
+    "plt.savefig(r\"C:\\Users\\Getrude\\Desktop\\ecommerce-ab-test\\images\\conversion_rate\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "6953143c",
    "metadata": {},
    "outputs": [
@@ -344,6 +347,7 @@
     "plt.title(\"Revenue Distribution by Group\")\n",
     "plt.ylabel(\"Revenue ($)\")\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.6)\n",
+    "plt.savefig(r\"C:\\Users\\Getrude\\Desktop\\ecommerce-ab-test\\images\\revenue_distribution\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
